new version pusblished to docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "DFM",
-  "start_url": "https://dfmapp.com",
-  "description": "Decentralized finance manager",
+  "name": "codeplay",
+  "start_url": "https://codeplay.dev",
+  "description": "Learn code by playing",
   "icons": [{
-    "src": "https://s3.amazonaws.com/blockstack.hatskier/logo.png",
+    "src": "https://s3.amazonaws.com/alcourses.codeplay/logo.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
